# bbs_sign

./: Cargo.toml  README.md
benches/: keygen.rs  proof_gen.rs  proof_verify.rs  sign.rs  verify.rs
src/: constants.rs  hash2G1.rs  key_gen.rs  lib.rs  main.rs  proof_gen.rs  proof_verify.rs  sign.rs  tests.rs  traits_helper.rs  verify.rs
src/tests/: bbs_over_bls_tests.rs  core_sign_tests.rs  proof_verify_tests.rs  sign_verify_tests.rs  test_vector.rs
src/utils/: core_utilities.rs  interface_utilities.rs  utilities_helper.rs
