[package]
name = "bbs_plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
rand = "0.8.4"
sha2 = "0.10.6"
digest = "0.10.7"
hkdf = "0.12.3"
ark-ff = "0.4.2"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.45"
elliptic-curve = "0.13.5"
subtle = "2.5.0"
ark-ec = "0.4.2"
ark-std = "0.4.0"
bn254_hash2curve = { version = "0.1.2"}
zeroize = "1.8.1"
ark-serialize = "0.4.2"
thiserror = "1.0.63"
ark-bls12-381 = "0.4.0"
bls12_381 = {git = "https://github.com/zkcrypto/bls12_381.git", rev = "9ea427c0eb1a7e2ac16902a322aea156c496ddb0", features = ["experimental"]} # for hashing to G1

[dev-dependencies]
criterion = "0.5.1"
test-case = "3.3.1"
once_cell = "1.10.0"

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "sign"
harness = false

[[bench]]
name = "verify"
harness = false

[[bench]]
name = "proof_gen"
harness = false

[[bench]]
name = "proof_verify"
harness = false